--- a/my-DevOps-Lab/roles/node-exporter/templates/node_exporter.service.j2
+++ b/my-DevOps-Lab/roles/node-exporter/templates/node_exporter.service.j2
@@ -6,8 +6,7 @@ After=network-online.target
 User={{ node_exporter_user }}
 Group={{ node_exporter_user }}
 Type=simple
-
 ExecStart={{ node_exporter_bin }}
 
-[Install}
+[Install]
 WantedBy=multi-user.target
