--- a/pki-lab-environment/roles/nginx-webserver/templates/webnginx.bbtlab.conf.j2
+++ b/pki-lab-environment/roles/nginx-webserver/templates/webnginx.bbtlab.conf.j2
@@ -5,7 +5,7 @@ server {
         root /var/www/webnginx.bbtlab/html;
         index index.html index.htm index.nginx-debian.html;
 
-        webserver webnginx.bbtlab.com www.webnginx.bbtlab.com;
+        server_name webnginx.bbtlab.com www.webnginx.bbtlab.com;
 
         location / {
                 try_files $uri $uri/ =404;
